# manyso

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/manyso/: abc.h  exceptions.h  native.h  platform.h
include/manyso/linux/: linux.h
include/manyso/windows/: windows.h
sample_so/: so.cpp
tests/: autowrap_tests.cpp  refpropwrap_tests.cpp  simple_tests.cpp
